<resources>
    <string name="app_name">RiwaPro</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_dashboard">dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_buy">Buy Now</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_policies">My Policies</string>
    <string name="menu_docs">My Documents</string>
    <string name="menu_profile"> My Profile</string>
    <string name="menu_lead">Lead</string>
    <string name="menu_bike">Bike Insurance</string>
    <string name="menu_health">Health Insurance</string>
    <string name="menu_life">Life Insurance</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

</resources>
