<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dashboard"
            android:icon="@drawable/dash"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/policies"
            android:icon="@drawable/policy"
            android:title="@string/menu_policies" />
        <item
            android:id="@+id/docs"
            android:icon="@drawable/doc"
            android:title="@string/menu_docs" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/profile"
            android:title="@string/menu_profile" />
    </group>
<group>
    <item android:title="Services">
        <menu>
            <item
                android:id="@+id/buy"
                android:icon="@drawable/buy"
                android:title="@string/menu_buy" />
            <item
                android:id="@+id/bike"
                android:icon="@drawable/motorcycle"
                android:title="@string/menu_bike" />
            <item
                android:id="@+id/lead"
                android:icon="@drawable/car"
                android:title="@string/menu_lead" />
            <item
                android:id="@+id/health"
                android:icon="@drawable/heartbeat"
                android:title="@string/menu_health" />
            <item
                android:id="@+id/life"
                android:icon="@drawable/family"
                android:title="@string/menu_life" />
        </menu>
    </item>
</group>
</menu>
